# c2d

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  ale.cfg  build_lib.sh  run.py
c2d/: agent.py  models.py  runner.py  settings.cmake  util.py
c2d/configured/: atarienv.py  hyperparameters.py
cmake_config/: FindLZ4.cmake  atarienv.py.in  c2d.pc.in  common.hpp.in  hyperparameters.py.in
data/: alien.json  amidar.json  assault.json  asterix.json  asteroids.json  atlantis.json  bankheist.json  battlezone.json  beamrider.json  berzerk.json  bowling.json  boxing.json  breakout.json  centipede.json  choppercommand.json  crazyclimber.json  demonattack.json  doubledunk.json  enduro.json  fishingderby.json  freeway.json  frostbite.json  gopher.json  gravitar.json  hero.json  icehockey.json  jamesbond.json  kangaroo.json  krull.json  kungfumaster.json  montezumarevenge.json  mspacman.json  namethisgame.json  phoenix.json  pitfall.json  pong.json  privateeye.json  qbert.json  riverraid.json  roadrunner.json  (+15 more)
data/supplementary/: alien_T1.csv  alien_T2.csv  alien_T3.csv  amidar_T1.csv  amidar_T2.csv  amidar_T3.csv  assault_T1.csv  assault_T2.csv  assault_T3.csv  asterix_T1.csv  asterix_T2.csv  asterix_T3.csv  asteroids_T1.csv  asteroids_T2.csv  asteroids_T3.csv  atlantis_T1.csv  atlantis_T2.csv  atlantis_T3.csv  bankheist_T1.csv  bankheist_T2.csv  bankheist_T3.csv  battlezone_T1.csv  battlezone_T2.csv  battlezone_T3.csv  beamrider_T1.csv  beamrider_T2.csv  beamrider_T3.csv  berzerk_T1.csv  berzerk_T2.csv  berzerk_T3.csv  bowling_T1.csv  bowling_T2.csv  bowling_T3.csv  (+132 more)
install_scripts/: copy_cudnn.sh  setup_ale_last.sh  setup_cuda_toolkit.sh  setup_rest.sh
src/: atarienv.cpp  atarienv.hpp  c2d.cpp  common.hpp  replaybuffer.cpp  replaybuffer.hpp
